[package]
name = "kithara-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cross-platform FFI adapter for the kithara audio player"
publish = false

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi_bindgen.rs"
required-features = ["uniffi-bindgen-cli"]

# Native-only deps for the UniFFI surface (`src/{cipher,config,item,…}.rs`).
# Moved to `[target.'cfg(not(target_arch = "wasm32"))'.dependencies]` so
# wasm32 builds don't pull `uniffi` (Future + Send incompatible with wasm)
# or `rand`/`uuid` which need explicit getrandom wasm_js wiring.
# `src/web/*` doesn't use any of these directly.

[features]
# `symphonia` is in the default set so a bare `cargo check -p kithara-ffi`
# (and the host uniffi-bindgen build) has a `DecoderBackend` variant — the
# apple/android (target_os-gated) variants are absent off-device, so without
# a backend `DecoderBackend` would be an empty enum and fail to compile.
# Device builds compile with `--no-default-features` (see `xtask apple`/
# `xtask android`), so `symphonia` is never pulled into apple/android — the
# hardware backend is the sole decoder there.
default = ["uniffi", "symphonia", "client-reqwest", "tls-rustls"]
uniffi = ["dep:uniffi"]
uniffi-bindgen-cli = ["uniffi", "uniffi/cli", "uniffi/cargo-metadata"]
apple = [
    "kithara/apple-fused-src",
    "kithara/apple-net",
    "kithara-play/apple-fused-src",
    "kithara-queue/apple-fused-src",
]
android = ["kithara/android"]
# Cross-platform software decode backend. Not part of apple/android
# (those own hardware decode on-device). Used for the host-side
# uniffi-bindgen build, where neither the apple nor the android
# (target_os-gated) DecoderBackend variant exists, so without a
# backend feature `DecoderBackend` would be an empty enum.
symphonia = ["kithara/symphonia", "kithara-queue/symphonia"]
stretch-signalsmith = ["kithara/stretch-signalsmith"]
stretch-bungee = ["kithara/stretch-bungee"]
# Marker feature for wasm32 build matrix (parallel to apple/android).
# Actual wasm-only deps live under [target.'cfg(target_arch = "wasm32")'].
# Forwards the reqwest stack so the wasm build (which runs with
# `--no-default-features --features wasm`) still selects a single HTTP backend
# (reqwest; wreq has no wasm target). The refs chain through the crate-local
# client-reqwest/tls-rustls forwarding below.
wasm = ["client-reqwest", "tls-rustls"]
probe = []
mock = []
# HTTP backend forwarding to every kithara-net-reaching dep. `kithara`
# (native) and the wasm-only `kithara-hls`/`kithara-abr` are target-gated;
# their edges are inert on the other target. The framework `apple` feature
# selects NSURLSession through `kithara/apple-net`; Android still resolves
# wreq through the facade `android` feature.
client-reqwest = [
    "kithara/client-reqwest",
    "kithara-queue/client-reqwest",
    "kithara-play/client-reqwest",
    "kithara-events/client-reqwest",
    "kithara-hls/client-reqwest",
    "kithara-abr/client-reqwest",
]
client-wreq = [
    "kithara/client-wreq",
    "kithara-queue/client-wreq",
    "kithara-play/client-wreq",
    "kithara-events/client-wreq",
    "kithara-hls/client-wreq",
    "kithara-abr/client-wreq",
]
tls-rustls = [
    "kithara/tls-rustls",
    "kithara-queue/tls-rustls",
    "kithara-play/tls-rustls",
    "kithara-events/tls-rustls",
    "kithara-hls/tls-rustls",
    "kithara-abr/tls-rustls",
]
tls-native = [
    "kithara/tls-native",
    "kithara-queue/tls-native",
    "kithara-play/tls-native",
    "kithara-events/tls-native",
    "kithara-hls/tls-native",
    "kithara-abr/tls-native",
]
# Dev-only conveniences enabled in xcframework builds for demo/staging.
# Currently: accepts TLS certs with invalid hostname / CA / expiry.
# Not for production use.
dev = []
# Test-only conveniences enabled in debug android builds for diagnostics.
# Exposes JNI entrypoints that render through the offline firewheel
# backend and write WAV output, bypassing cpal/AAudio. Never ship in a
# release AAR.
test = ["kithara/probe", "kithara-play/probe", "dep:cpal"]

[dependencies]
kithara-events = { workspace = true }
# Cross-platform deps (used by both the native UniFFI modules and `src/web`).
# `kithara-play` is the canonical owner of the shared play types
# (`PlayError`, `PlayerStatus`, `TimeRange`, …) that `core::types` mirrors,
# so the cross-platform `AudioPlayer` facade resolves them from one crate on
# both targets. The native arm pulls a host backend below; the wasm arm pulls
# the web-audio backend in the wasm32 target block.
kithara-platform = { workspace = true }

delegate = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# `default-features = false` on kithara/kithara-queue: their defaults pull
# `symphonia`, which would leak into apple/android device builds (compiled
# with `--no-default-features`). symphonia is re-added explicitly via the
# crate-local `symphonia` feature (in the default set, off on device).
kithara = { workspace = true, default-features = false, features = ["file", "hls"] }
kithara-drm = { workspace = true }
# Direct dep so the cross-platform `core::types` / `core::item` can resolve
# the shared play types from `kithara_play` on native too (the wasm arm pulls
# the same crate with the web-audio backend). The `probe` feature is gated
# behind the crate's own `test` feature below.
kithara-play = { workspace = true, default-features = false, features = ["backend-cpal"] }
kithara-queue = { workspace = true, default-features = false, features = ["backend-cpal"] }

bytes = { workspace = true }
# Pulled in by firewheel-cpal transitively; surfaced as a direct dep under
# `test` so the probe JNI can enumerate host/device configs without
# touching the production firewheel backend types.
cpal = { workspace = true, optional = true }
dashmap = { workspace = true }
rand = { workspace = true }
uniffi = { workspace = true, optional = true, default-features = false }
unimock = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
kithara-abr = { workspace = true, default-features = false }
kithara-drm = { workspace = true }
# The wasm worker reaches the shared DRM key-options, ABR-mode, and
# key-processor types directly (native reaches the same types through the
# `kithara` facade and a native-only `kithara-drm` dep).
kithara-hls = { workspace = true, default-features = false }
kithara-play = { workspace = true, default-features = false, features = ["backend-web-audio", "wasm-bindgen", "symphonia", "webcodecs"] }
kithara-queue = { workspace = true, default-features = false, features = ["backend-web-audio", "symphonia", "webcodecs"] }
kithara-test-macros = { workspace = true }

bytes = { workspace = true }
console_error_panic_hook = { workspace = true }
js-sys = { workspace = true }
num-traits = { workspace = true }
# Wraps the `!Send` `js_sys::Function` behind a `Send + Sync` guard (with a
# runtime same-thread assertion) so the JS-backed observer impls satisfy the
# `core::observer` traits' real `Send + Sync` supertraits on wasm.
send_wrapper = { workspace = true }
tracing-log = { workspace = true }
tracing-wasm = { workspace = true }
# `core::item` derives the per-item `uuid_i64` handle via UUIDv5 (pure SHA-1,
# no RNG) — the workspace dep is `v5`-only, so no `getrandom` wasm backend is
# pulled.
uuid = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
jni = { workspace = true }
ndk-context = { workspace = true }
rustls-platform-verifier = { workspace = true }
tracing-android = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
kithara = { workspace = true, features = ["probe"] }
kithara-test-utils = { workspace = true, features = ["mock", "probe", "hang"] }

futures = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
