[package]
name = "kithara-file"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Progressive file download for MP3, AAC, and other audio formats"

[lints]
workspace = true

[dependencies]
bytes = { workspace = true }
derivative = { workspace = true }
derive_setters = { workspace = true }
kithara-assets = { workspace = true }
kithara-events = { workspace = true }
kithara-net = { workspace = true }
kithara-platform = { workspace = true }
kithara-stream = { workspace = true }
kithara-storage = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
url = { workspace = true }
crossbeam-queue = { workspace = true }
dhat = { workspace = true, optional = true }
hotpath = { workspace = true, optional = true }

[features]
default = []
perf = ["dep:hotpath", "hotpath/hotpath", "kithara-net/perf"]
internal = []

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["full"] }

[dev-dependencies]
kithara-file = { path = ".", default-features = false, features = ["internal"] }
tempfile = { workspace = true }
kithara-test-utils = { workspace = true }
wasm-bindgen-test = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
axum = { workspace = true }
rodio = { workspace = true, features = ["playback"] }
tracing-subscriber = { workspace = true }
memory-stats = { workspace = true }
reqwest = { workspace = true, features = ["rustls", "stream"] }
dhat = { workspace = true }
