[package]
name = "kithara-file"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Progressive download and playback for MP3, AAC, FLAC and more."
keywords = ["audio", "streaming", "mp3", "aac", "download"]
categories = ["multimedia::audio", "network-programming"]

[lints]
workspace = true

[dependencies]
bon = { workspace = true }
kithara-abr = { workspace = true }
kithara-assets = { workspace = true }
kithara-events = { workspace = true }
kithara-net = { workspace = true }
kithara-platform = { workspace = true }
kithara-stream = { workspace = true }
kithara-storage = { workspace = true }
kithara-test-utils = { workspace = true }
futures = { workspace = true }
re_mp4 = { workspace = true }
thiserror = { workspace = true }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
url = { workspace = true }
hotpath = { workspace = true, optional = true }

[features]
default = []
perf = ["dep:hotpath", "hotpath/hotpath", "kithara-net/perf"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kithara-workspace-hack = { version = "0.0.1-alpha2", path = "../kithara-workspace-hack" }
tokio-util = { workspace = true, features = ["full"] }

[dev-dependencies]
tempfile = { workspace = true }
kithara-test-utils = { path = "../kithara-test-utils", features = ["mock", "probe"] }
wasm-bindgen-test = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
axum = { workspace = true }
tracing-subscriber = { workspace = true }
memory-stats = { workspace = true }
reqwest = { workspace = true, features = ["rustls", "stream"] }
