[package]
name = "kithara-file"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Progressive download and playback for MP3, AAC, FLAC and more."
keywords = ["audio", "streaming", "mp3", "aac", "download"]
categories = ["multimedia::audio", "network-programming"]

[features]
default = ["client-reqwest", "tls-rustls"]
perf = ["dep:hotpath", "hotpath/hotpath", "kithara-net/perf"]
# HTTP backend forwarding to every kithara-net-reaching dep.
client-reqwest = [
    "kithara-net/client-reqwest",
    "kithara-stream/client-reqwest",
    "kithara-events/client-reqwest",
    "kithara-abr/client-reqwest",
]
client-wreq = [
    "kithara-net/client-wreq",
    "kithara-stream/client-wreq",
    "kithara-events/client-wreq",
    "kithara-abr/client-wreq",
]
tls-rustls = [
    "kithara-net/tls-rustls",
    "kithara-stream/tls-rustls",
    "kithara-events/tls-rustls",
    "kithara-abr/tls-rustls",
]
tls-native = [
    "kithara-net/tls-native",
    "kithara-stream/tls-native",
    "kithara-events/tls-native",
    "kithara-abr/tls-native",
]
# No-op shim retained so `#[kithara::probe]` macro expansions
# (which emit `cfg(any(test, feature = "probe"))`) don't trigger
# `unexpected_cfgs` warnings on this crate. No production code is
# gated by this feature; the probe arg is observed via USDT in test
# builds only.
probe = []

[dependencies]
kithara-abr = { workspace = true, default-features = false }
kithara-assets = { workspace = true }
kithara-events = { workspace = true }
kithara-net = { workspace = true, default-features = false }
kithara-platform = { workspace = true }
kithara-storage = { workspace = true }
kithara-stream = { workspace = true, default-features = false }
kithara-test-utils = { workspace = true }

bon = { workspace = true }
delegate = { workspace = true }
derive_more = { workspace = true }
fieldwork = { workspace = true }
futures = { workspace = true }
hotpath = { workspace = true, optional = true }
re_mp4 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
kithara-workspace-hack = { version = "0.0.1-alpha4", path = "../kithara-workspace-hack" }

[dev-dependencies]
kithara-test-utils = { path = "../kithara-test-utils", features = ["mock", "probe", "hang"] }
tempfile = { workspace = true }
wasm-bindgen-test = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
axum = { workspace = true }
memory-stats = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
