[package]
name = "kithara-hang-detector"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Hang watchdog primitives and macros for loop progress detection"

[lints]
workspace = true

[features]
disable-hang-detector = []

[package.metadata.cargo-machete]
ignored = ["kithara-workspace-hack"]

[dependencies]
web-time = { workspace = true }
tracing = { workspace = true }
kithara-hang-detector-macros = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kithara-workspace-hack = { version = "0.1", path = "../kithara-workspace-hack" }

[dev-dependencies]
kithara-hang-detector = { path = "." }
kithara-test-macros = { workspace = true }
kithara-test-utils = { workspace = true }
wasm-bindgen-test = { workspace = true }
