[package]
name = "kithara-hls"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "HLS VOD engine: adaptive bitrate, segment cache, offline."
keywords = ["hls", "streaming", "audio", "abr", "vod"]
categories = ["multimedia::audio", "network-programming"]

[lints]
workspace = true

[dependencies]
kithara-abr = { workspace = true }
kithara-assets = { workspace = true }
kithara-bufpool = { workspace = true }
kithara-events = { workspace = true, features = ["hls"] }
kithara-drm = { workspace = true }
kithara-net = { workspace = true }
kithara-stream = { workspace = true }
kithara-storage = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
bon = { workspace = true }
delegate = { workspace = true }
futures = { workspace = true }
hls_m3u8 = { workspace = true }
thiserror = { workspace = true }
tokio-util = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
kithara-platform = { workspace = true }
kithara-test-utils = { workspace = true }
rangemap = { workspace = true }
re_mp4 = { workspace = true }
num-traits = { workspace = true }
hotpath = { workspace = true, optional = true }

[features]
default = []
perf = ["dep:hotpath", "hotpath/hotpath", "kithara-net/perf"]
probe = []

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kithara-workspace-hack = { version = "0.0.1-alpha2", path = "../kithara-workspace-hack" }
tokio-util = { workspace = true, features = ["full"] }

[dev-dependencies]
aes = { workspace = true }
cbc = { workspace = true }
kithara-hls = { path = ".", default-features = false, features = ["probe"] }
kithara-net = { workspace = true, features = ["probe"] }
kithara-test-utils = { path = "../kithara-test-utils", features = ["mock", "probe"] }
tempfile = { workspace = true }
serial_test = { workspace = true }
wasm-bindgen-test = { workspace = true }
unimock = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
axum = { workspace = true }
tracing-subscriber = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["hotpath"]
