[package]
name = "kithara-hls"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "HLS VOD engine: adaptive bitrate, segment cache, offline."
keywords = ["hls", "streaming", "audio", "abr", "vod"]
categories = ["multimedia::audio", "network-programming"]

[lints]
workspace = true

[dependencies]
kithara-abr = { workspace = true, default-features = false }
kithara-assets = { workspace = true }
kithara-bufpool = { workspace = true }
kithara-events = { workspace = true, features = ["hls"] }
kithara-drm = { workspace = true }
kithara-net = { workspace = true, default-features = false }
kithara-stream = { workspace = true, default-features = false }
kithara-storage = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
bon = { workspace = true }
delegate = { workspace = true }
futures = { workspace = true }
hls_m3u8 = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
kithara-platform = { workspace = true }
kithara-test-utils = { workspace = true }
rangemap = { workspace = true }
re_mp4 = { workspace = true }
num-traits = { workspace = true }
hotpath = { workspace = true, optional = true }

[features]
default = ["client-reqwest", "tls-rustls"]
perf = ["dep:hotpath", "hotpath/hotpath", "kithara-net/perf"]
probe = []
# HTTP backend forwarding to every kithara-net-reaching dep.
client-reqwest = [
    "kithara-net/client-reqwest",
    "kithara-stream/client-reqwest",
    "kithara-events/client-reqwest",
    "kithara-abr/client-reqwest",
]
client-wreq = [
    "kithara-net/client-wreq",
    "kithara-stream/client-wreq",
    "kithara-events/client-wreq",
    "kithara-abr/client-wreq",
]
tls-rustls = [
    "kithara-net/tls-rustls",
    "kithara-stream/tls-rustls",
    "kithara-events/tls-rustls",
    "kithara-abr/tls-rustls",
]
tls-native = [
    "kithara-net/tls-native",
    "kithara-stream/tls-native",
    "kithara-events/tls-native",
    "kithara-abr/tls-native",
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kithara-workspace-hack = { version = "0.0.1-alpha3", path = "../kithara-workspace-hack" }

[dev-dependencies]
aes = { workspace = true }
cbc = { workspace = true }
kithara-hls = { path = ".", default-features = false, features = ["probe"] }
kithara-net = { workspace = true, default-features = false, features = [
    "probe",
    "client-reqwest",
    "tls-rustls",
] }
kithara-test-utils = { path = "../kithara-test-utils", features = ["mock", "probe", "hang"] }
tempfile = { workspace = true }
serial_test = { workspace = true }
wasm-bindgen-test = { workspace = true }
unimock = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
axum = { workspace = true }
tracing-subscriber = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["hotpath"]
