[package]
name = "kithara-net"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Streaming HTTP for audio: retry, timeout, byte ranges."
keywords = ["http", "networking", "streaming", "audio", "download"]
categories = ["network-programming", "asynchronous"]

[features]
default = ["client-reqwest", "tls-rustls"]
# HTTP client backend. Pick exactly one per target. `client-reqwest`
# (pure-Rust) is the portable default; `client-wreq` (BoringSSL + browser
# TLS/HTTP2 emulation) and `client-apple` (NSURLSession) are native-only
# opt-ins. See CONTEXT.md "HTTP client backends".
client-reqwest = ["dep:reqwest", "dep:tower-layer", "dep:tower-service"]
client-wreq = ["dep:tower-layer", "dep:tower-service", "dep:wreq", "dep:wreq-util"]
client-apple = ["dep:dashmap", "dep:kithara-apple", "kithara-apple/foundation"]
# TLS backend for the `client-reqwest` path. No effect on `client-wreq` (always
# BoringSSL) or `client-apple` (URLSession owns TLS). `tls-rustls` is the
# default; `tls-native` uses the platform TLS (Apple Secure Transport /
# SChannel / OpenSSL). Both are no-ops on wasm32, where the browser owns TLS.
tls-rustls = ["reqwest?/rustls"]
tls-native = ["reqwest?/native-tls"]
probe = []
mock = []
perf = ["dep:hotpath", "hotpath/hotpath"]

[dependencies]
kithara-bufpool = { workspace = true }
kithara-platform = { workspace = true }
kithara-test-macros = { workspace = true }

async-trait = { workspace = true }
bitflags = { workspace = true }
bon = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true, optional = true }
futures = { workspace = true }
hotpath = { workspace = true, optional = true }
num-traits = { workspace = true }
# `client-reqwest` backend (native + wasm). reqwest gates its own TLS /
# compression deps behind `cfg(not(wasm32))`, so the compression / cookie / TLS
# features here are inert on wasm and selected on native.
reqwest = { workspace = true, optional = true, features = [
    "stream",
    "gzip",
    "brotli",
    "deflate",
    "zstd",
    "cookies",
] }
thiserror = { workspace = true }
tracing = { workspace = true }
unimock = { workspace = true }
url = { workspace = true }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
kithara-apple = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kithara-workspace-hack = { version = "0.0.1-alpha4", path = "../kithara-workspace-hack" }
tower-layer = { workspace = true, optional = true }
tower-service = { workspace = true, optional = true }
# `client-wreq` backend (native only — BoringSSL has no wasm target).
wreq = { workspace = true, optional = true, features = [
    "brotli",
    "cookies",
    "deflate",
    "gzip",
    "stream",
    "zstd",
] }
wreq-util = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { workspace = true }

[dev-dependencies]
kithara-net = { path = ".", default-features = false }
kithara-test-utils = { path = "../kithara-test-utils", features = ["mock", "probe", "hang", "no-block"] }

futures = { workspace = true }
tracing-subscriber = { workspace = true }
wasm-bindgen-test = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
kithara-platform = { workspace = true, features = ["tokio-net"] }

axum = { workspace = true }
memory-stats = { workspace = true }

[lints]
workspace = true
