[package]
name = "kithara-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Platform-aware primitives (sync, traits, time) for native and wasm32 targets"

[lints]
workspace = true

[features]
internal = []
disable-hang-detector = ["kithara-hang-detector/disable-hang-detector"]

[dependencies]
futures = { workspace = true }
web-time = { workspace = true }
kithara-hang-detector = { workspace = true }
tokio_with_wasm = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kithara-workspace-hack = { version = "0.1", path = "../kithara-workspace-hack" }
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["time", "sync", "rt"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm_safe_thread = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
console_error_panic_hook = { workspace = true }

[dev-dependencies]
kithara-platform = { path = ".", default-features = false, features = ["internal"] }
kithara-test-macros = { workspace = true }
wasm-bindgen-test = { workspace = true }
