[package]
name = "kithara-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Platform-aware primitives (sync, traits, time) for native and wasm32 targets"

[lints]
workspace = true

[dependencies]
futures = { workspace = true }
tokio-util = { workspace = true }
web-time = { workspace = true }
tokio_with_wasm = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
kithara-workspace-hack = { version = "0.1", path = "../kithara-workspace-hack" }
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["time", "sync", "rt"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm_safe_thread = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
console_error_panic_hook = { workspace = true }

[dev-dependencies]
kithara-platform = { path = ".", default-features = false }
kithara-test-macros = { workspace = true }
kithara-test-utils = { workspace = true, features = ["test-utils"] }
wasm-bindgen-test = { workspace = true }
